--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,1 +1,10 @@
+[package]
+name = "crf"
+version = "0.0.1"
+edition = "2021"
 
+[dependencies]
+camera_capture = "0.5.0"
+chrono = "0.4.38"
+ctrlc = "3.4.4"
+image = "0.25.1" 
